# STV_Voting

./: .gitignore  CMakeLists.txt  README.md
STV_Voting/: CMakeLists.txt  CMakePresets.json  STV_Voting.cpp  STV_Voting.h
STV_Voting/enc_temp_folder/b43767ac15ff3c28ae33c3ebd6ebf3/: STV_Voting.cpp
STV_Voting/tests/: ExperimentalTicketsTests.cpp  FirstPhaseAllTicketsSurplusTest.cpp  FirstPhaseOverfillRawRankTest.cpp  HistoryTieBreakTests.cpp  LastBatchNoNextTests.cpp  LaterPhaseLastBatchOnlyTest.cpp  MoreStvTests.cpp  NoNextSplitFloorZeroTests.cpp  QuotaRoundingTests.cpp  SingleContinuingSurplusGoesAllTest.cpp  SurplusTransferTests.cpp
enc_temp_folder/625d42acdbf17ed1c988c164c849814/: STV_Voting.cpp
